<resources>
    <string name="app_name">EcommerMattEvan</string>
    <string name="login">Login</string>
    <string name="email">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="rec_cont">Recordar contraseña</string>
    <string name="forgot">Olvidaste tu contraseña?</string>
    <string name="newUser">Nuevo usuario</string>
    <string name="matt_evan">Matt Evan</string>
    <string name="welcome">Bienvenido a</string>
    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="title_activity_navigation_view_init">NavigationViewInit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_main">Inicio</string>
    <string name="menu_pedidos">Mis pedidos</string>
</resources>
