<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_pedidos"
            android:icon="@drawable/ic_baseline_archive_24"
            android:title="@string/menu_pedidos" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_exit" />
    </group>
</menu>
