<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/perms_dangerous_grp_color"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="20dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/login_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/matt_evan"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin2"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/DimGray"
                android:textSize="16sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:visibility="gone"
                />


            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin2"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textColorHint="@color/DimGray"
                android:textSize="16sp"  />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp" >

                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rec_cont"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:padding="5dp"
                    android:text="@string/forgot"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>


            <Button
                android:id="@+id/loginBtn"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@drawable/button_selector"
                android:padding="3dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:layout_marginTop="3dp"
                android:padding="3dp" />
        </LinearLayout>


        <TextView
            android:id="@+id/createAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/newUser"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
